brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/Step_Deliverable_Definition__c.object-meta.xml
<CustomObject>
    <label>Step Deliverable Definition</label>
    <nameField>
        <displayFormat>SDD-{0000}</displayFormat>
        <label>Step Deliverable Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Deliverable Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>