brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Days_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Complete__c</fullName>
    <label>Days To Complete</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>