brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>