brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <displayFormat>K-{0000}</displayFormat>
    <label>Key</label>
    <type>AutoNumber</type>
</CustomField>