brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Schema_JSON__c.field-meta.xml
<CustomField>
    <fullName>Schema_JSON__c</fullName>
    <label>Schema JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>