brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Step_Template__c.field-meta.xml
<CustomField>
    <fullName>Step_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Step Template</label>
    <referenceTo>StepTemplate__c</referenceTo>
    <relationshipLabel>Step Deliverable Definitions</relationshipLabel>
    <relationshipName>StepDeliverableDefinitions</relationshipName>
    <type>Lookup</type>
</CustomField>