brain/sources/prod-metadata/objects/Step_Deliverable_Definition__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Video_URL</fullName>
                <label>Video URL</label>
            </value>
            <value>
                <fullName>File</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>